<!--
  ~ Copyright (c) 2014.  Author:Steven Dees(kjstevokjmaster@gmail.com)
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>

    <string name="app_name">Cookie MoMster</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_scout">Add Scout</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_booth">Add Booth</string>
    <string name="assign_scout">Assign Scout</string>
    <string name="delete">Delete</string>
    <string name="add_cookie">Add Cookie</string>
    <string name="order">Order</string>
    <string name="pickup">Pickup</string>
    <string name="turn_in">Turn In</string>
    <string name="add_order">add_order</string>
    <string name="add_order_title">Add Order</string>
    <string name="picker_cancel">Cancel</string>
    <string name="picker_set">OK</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="timer_delete">Delete</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
    <string name="number_picker_minus_label">—</string>
    <string name="number_picker_seperator">.</string>
    <string name="number_delete">Delete</string>
    <string name="number_picker_plus_minus">+/-</string>
    <string name="hms_picker_hours_label">H</string>
    <string name="hms_picker_minutes_label">M</string>
    <string name="hms_picker_seconds_label">S</string>
    <string name="expiration_picker_seperator">/</string>
    <string name="month_c">MONTH</string>
    <string name="day_c">DAY</string>
    <string name="year_c">YEAR</string>

    <!-- 1.3.1 -->
    <string name="min_error">Please input a number greater than or equal to %1$d</string>
    <string name="max_error">Please input a number less than or equal to %1$d</string>
    <string name="min_max_error">Please input a number between %1$d and %2$d</string>

    <!-- From AOSP -->
    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected">%1$s selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key">%1$s deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="place_cupboard_order">Order</string>
    <string name="pickup_cupboard_order">Pickup</string>
    <string name="internal_add_cupboard_order">add_cupboard_order</string>
    <string name="add_cupboard_order_title">Order from Cupboard</string>
    <string name="pickup_order">pickup_order</string>
    <string name="pickup_order_title">Pickup Order</string>
    <string name="received">Received</string>
    <string name="ready_for_pickup">Ready for pickup.</string>
    <string name="on_order">On Order</string>
    <string name="border">border</string>
    <string name="scout_pickup_order">scout_pickup_order</string>
    <string name="scout_pickup_order_title">Scout Order Pickup</string>
    <string name="order_from_cupboard">Order</string>
    <string name="pickup_from_cupboard">Pickup</string>
    <string name="add_personal">Add Order</string>
    <string name="eat_cookies">Eat</string>
    <string name="edit">Edit</string>
    <string name="delivered">Deliver</string>
    <string name="collect">Collect</string>
    <string name="remove_scout">Remove Scout</string>
    <string name="scout_id">scout_id</string>
    <string name="scout_turn_in">scout_turn_in</string>
    <string name="scout_turn_in_title">Turning In</string>
    <string name="add_customer_title">Add Customer</string>
    <string name="Actions">Actions</string>
    <string name="Scouts">Scouts</string>
    <string name="Booths">Booth</string>
    <string name="Cupboard">Cupboard</string>
    <string name="Personal">Personal</string>
    <string name="Summary">Summary</string>
    <string name="add_personal_order_title">Add Personal Order</string>
    <string name="cookies_ready_for_pickup_by">Cookies are ready for pickup by:</string>
    <string name="awaiting_cookie_delivery">The following are awaiting cookie delivery:</string>
    <string name="personal_deliver_order_title">Deliver Order</string>
    <string name="personal_deliver_order">deliver_order</string>
    <string name="booth_list">booth_list</string>
    <string name="boxes">Boxes</string>
    <string name="cases">Cases</string>
    <string name="checkout">Check Out</string>
    <string name="checkin">Check In</string>
    <string name="booth_checkout_order">booth_checkout</string>
    <string name="booth_checkin_order">booth_check_in</string>
    <string name="booths_req_check_out">These booths require check-out today</string>
    <string name="booths">Booths</string>
    <string name="booths_need_ordering">The following booths need to be ordered:</string>
    <string name="booths_req_check_in">These booths are awaiting check-in:</string>
    <string name="totals">Totals</string>
    <string name="paid">Paid</string>
    <string name="gifts_of_caring">Gifts of Caring</string>
    <string name="cash_recieved">Cash Received</string>
    <string name="deficit">Deficit</string>
    <string name="cookie_mom">Cookie Mom</string>
    <string name="Customers">Customers</string>
    <string name="contact_info">Contact Info</string>
    <string name="customer_name">Customer\'s Name</string>
    <string name="add">Add</string>
    <string name="error">Error</string>
    <string name="edit_order">Edit Order</string>
    <string name="edit_order_title">Edit Order</string>
    <string name="select_scout">Select Scout</string>
    <string name="upcoming_booths">Upcoming Booths</string>
    <string name="menu_about">About</string>
    <string name="auto_case">Automatically adjust to cases for cupboard orders.</string>
    <string name="auto_case_summary">This will round up your orders to the nearest case size and autofill the order amount on the Cupboard order/pickup screens.</string>
    <string name="custom_cookie">Customize cookie names</string>
    <string name="custom_cookie_summary">If your area has a different selection of cookies available, check this box to customize the cookie names.</string>
    <string name="pref_custom_cookie_name_list_title">Custom Cookies</string>
    <string name="amt_due">Amt Due</string>
    <string name="name">Name</string>
    <string name="cookie_type">Cookie Type</string>
    <string name="diff_goc">Diff/GoC</string>
    <string name="location">Location</string>

</resources>