<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_assign_scout"
          android:title="@string/assign_scout"
            />
    <item android:id="@+id/menu_remove_scout"
          android:title="@string/remove_scout"
            />
    <item android:id="@+id/menu_booth_delete"
          android:title="@string/delete"
            />
    <!--<item android:id="@+id/menu_booth_edit"-->
    <!--android:title="@string/edit"-->
    <!--/>-->

    <item android:id="@+id/menu_booth_order"
          android:title="@string/order"
            />

    <item android:id="@+id/menu_booth_checkout"
          android:title="@string/checkout"
            />

    <item android:id="@+id/menu_booth_checkin"
          android:title="@string/checkin"
            />
</menu>