<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_auto_case"
        android:title="@string/auto_case"
        android:summary="@string/auto_case_summary"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="pref_custom_cookie_names"
        android:title="@string/custom_cookie"
        android:summary="@string/custom_cookie_summary"
        android:defaultValue="false" />
    <ListPreference
        android:dependency="pref_custom_cookie_names"
        android:key="pref_custom_cookie_name_list"
        android:title="@string/pref_custom_cookie_name_list_title"
        android:dialogTitle="@string/pref_custom_cookie_name_list_title" />

</PreferenceScreen>