<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2014 Steven Dees kjstevokjmaster@gmail.com

Parts of the this code also copyright:
  ~ /*******************************************************************************
  ~   Copyright (c) 2013 Gabriele Mariotti.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  ******************************************************************************/
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_marginLeft="3dp"
              android:layout_marginRight="3dp"
              android:minHeight="210dp"
              android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boxes"
                android:id="@+id/textView"
                android:textColor="@color/blue"
                android:layout_gravity="bottom"
                android:singleLine="false"
                android:gravity="bottom|right"
                android:layout_toLeftOf="@+id/textView1"
                android:layout_alignParentStart="false"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid"
                android:id="@+id/textView1"
                android:textColor="@color/color_thin_mints"
                android:layout_gravity="bottom"
                android:gravity="bottom|right"
                android:layout_alignParentStart="false"
                android:layout_toLeftOf="@+id/textView2"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amt_due"
                android:id="@+id/textView2"
                android:gravity="bottom|right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="false"
                android:layout_alignParentTop="false"
                android:padding="10dp" />

            <TextView
                style="@style/carddemo_googlenow_main_inner_lastupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:layout_gravity="left|top"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false" />
        </RelativeLayout>

    </LinearLayout>
    <TextView
            android:id="@+id/carddemo_googlenow_main_inner_lastupdate"
            style="@style/carddemo_googlenow_main_inner_lastupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <net.kjmaster.cookiemom.summary.stat.scout.SummaryStatScoutListLayout
            android:id="@+id/carddemo_googlenow_main_inner_list"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/card_header_simple_title_margin_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</LinearLayout>