<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*******************************************************************************
  ~   Copyright (c) 2013 Gabriele Mariotti.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  ******************************************************************************/
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@drawable/cab_background_bottom_carddemo"
                android:paddingLeft="@dimen/list_card_padding_left"
                android:paddingTop="@dimen/list_card_padding_top" android:paddingRight="@dimen/list_card_padding_right"
                android:paddingBottom="@dimen/list_card_padding_bottom" android:gravity="top"

                style="@style/card.main_layout" android:clickable="false">


    <ImageView
            android:id="@+id/colorBorder"
            android:background="@drawable/rectangle"
            android:layout_width="10dp"
            android:layout_height="@dimen/card_thumbnail_height"
            android:layout_toRightOf="@+id/ready_for_pickup"
            android:contentDescription="@string/border" android:visibility="invisible"/>

    <!-- Use same ID to use built-in features -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="$3,530.00"
            android:textSize="20dp"
            android:id="@+id/summary_stat_totals_paid_text" android:textIsSelectable="false"

            android:layout_alignParentLeft="false"
            android:gravity="center"
            android:layout_toRightOf="@+id/summary_stat_totals_boxes_text"
            android:layout_alignBaseline="@+id/summary_stat_totals_boxes_text"
            android:padding="10dp" android:textColor="@android:color/holo_green_dark"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxes"
            android:id="@+id/summary_stat_totals_boxes_caption"
            android:layout_marginLeft="10dp" android:visibility="visible"
            android:singleLine="true"
            android:layout_toRightOf="@+id/colorBorder" android:layout_alignBottom="@+id/colorBorder"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ready_for_pickup"
            android:text="@string/ready_for_pickup"
            android:singleLine="false"
            android:scaleType="fitEnd" android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false" android:layout_alignParentTop="false"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:lines="3" android:maxWidth="@android:dimen/app_icon_size" android:gravity="center"
            android:layout_centerVertical="true" android:textColor="@android:color/holo_red_dark"
            android:textStyle="italic" android:checkMark="@string/ready_for_pickup" android:visibility="gone"
            android:layout_alignBottom="@+id/summary_stat_totals_boxes_caption"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="visible"
              android:id="@+id/summary_stat_totals_boxes_text"
              android:text="930"
              android:textSize="20dp"
              android:layout_alignRight="@+id/summary_stat_totals_boxes_caption"
              android:layout_alignLeft="@+id/summary_stat_totals_boxes_caption"
              android:layout_above="@+id/summary_stat_totals_boxes_caption" android:enabled="false"
              android:longClickable="false" android:gravity="center" android:textColor="@android:color/holo_blue_dark"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_recieved"
            android:id="@+id/summary_stat_totals_paid_caption" android:gravity="center|top"
            android:layout_alignParentLeft="false"
            android:layout_toRightOf="@+id/summary_stat_totals_boxes_caption"
            android:layout_alignBaseline="@+id/summary_stat_totals_boxes_caption"
            android:layout_marginLeft="10dp" android:layout_alignRight="@+id/summary_stat_totals_paid_text"
            android:layout_alignLeft="@+id/summary_stat_totals_paid_text"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/gifts_of_caring"
              android:id="@+id/summary_stat_totals_goc_caption" android:gravity="center|top"
              android:layout_alignParentLeft="false" android:layout_toRightOf="@+id/summary_stat_totals_paid_caption"
              android:layout_alignBaseline="@+id/summary_stat_totals_boxes_caption" android:layout_marginLeft="10dp"
              android:layout_alignRight="@+id/summary_stat_totals_goc_text"
              android:layout_alignLeft="@+id/summary_stat_totals_goc_text"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$19,000.00"
              android:textSize="20dp" android:id="@+id/summary_stat_totals_goc_text" android:textIsSelectable="false"
              android:layout_alignParentLeft="false" android:gravity="center"
              android:layout_toRightOf="@+id/summary_stat_totals_paid_text"
              android:layout_alignBaseline="@+id/summary_stat_totals_boxes_text"
              android:textColorLink="@color/color_berry" android:singleLine="true" android:padding="10dp"/>


</RelativeLayout>