<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_case"
        android:id="@+id/settings_auot_fill_cases_check" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/auto_case_summary"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff1107"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@android:drawable/ic_dialog_alert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="WARNING!"
            android:id="@+id/textView2"
            android:textColor="#e9eb08" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Custom cookies is experimental.  You can not use personal mode with it enabled.  Not recommended if you already have data you would like to preserve.  USE AT YOUR OWN RISK!  "
        android:id="@+id/textView3"
        android:background="#FF1107"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_cookie"
        android:id="@+id/setting_custom_cookie_check" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting_cookie_list"
        style="@android:style/Widget.Spinner.DropDown"
        android:entries="@array/cookie_names_array"
        android:spinnerMode="dropdown" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_edit_cookie"
        android:maxLines="1"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:autoText="false"
        android:inputType="textCapWords" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save this cookie name"
        android:id="@+id/setting_save_cookie" />

</LinearLayout>