<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014.  Author:Steven Dees(kjstevokjmaster@gmail.com)
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:minHeight="210dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right|top">

            <TextView
                style="@style/carddemo_googlenow_main_inner_lastupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cookie_type"
                android:textColor="@android:color/black"
                android:layout_gravity="left|top"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received"
                android:id="@+id/textView"
                android:textColor="@color/blue"
                android:layout_gravity="bottom"
                android:singleLine="false"
                android:gravity="bottom|right"
                android:layout_toLeftOf="@+id/textView1"
                android:layout_alignParentStart="false"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_order"
                android:id="@+id/textView1"
                android:textColor="@color/color_thin_mints"
                android:layout_gravity="bottom"
                android:gravity="bottom|right"
                android:layout_alignParentStart="false"
                android:layout_toLeftOf="@+id/textView2"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amt_due"
                android:id="@+id/textView2"
                android:gravity="bottom|right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="false"
                android:layout_alignParentTop="false"
                android:paddingLeft="5dp" />

        </RelativeLayout>

    </LinearLayout>
    <!--<LinearLayout android:orientation="horizontal" android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<TextView-->
    <!--style="@style/carddemo_googlenow_main_inner_lastupdate"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" android:text="Cookie Type"-->
    <!--android:textColor="@android:color/black" android:paddingLeft="5dp"-->
    <!--android:paddingRight="5dp" android:layout_gravity="center_horizontal|bottom"/>-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Picked Up"-->
    <!--android:id="@+id/textView" android:textColor="@android:color/holo_blue_dark"-->
    <!--android:paddingLeft="5dp" android:paddingRight="5dp"-->
    <!--android:layout_gravity="center_horizontal|bottom"/>-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="On Order"-->
    <!--android:id="@+id/textView1" android:textColor="@android:color/holo_green_dark"-->
    <!--android:paddingLeft="5dp" android:paddingRight="5dp"-->
    <!--android:layout_gravity="center_horizontal|bottom"/>-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Amt Due"-->
    <!--android:id="@+id/textView2" android:paddingLeft="5dp"-->
    <!--android:paddingRight="5dp" android:layout_gravity="center_horizontal"/>-->

    <!--</LinearLayout>-->
    <TextView
        android:id="@+id/carddemo_googlenow_main_inner_lastupdate"
        style="@style/carddemo_googlenow_main_inner_lastupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <net.kjmaster.cookiemom.scout.expander.ScoutExpanderListLayout
        android:id="@+id/carddemo_googlenow_main_inner_list"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/card_header_simple_title_margin_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>